--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: 保安阿强
 description: Security A Qiang的博客
 keywords: 保安,保安阿强,Security,废物,辣鸡
 author: Security A Qiang
-footerText: '保安阿强创建于2021.7月'
+footerText: '保安阿强创建于2015'
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
