--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 encoding: utf-8
 
 # SEO相关信息
-title: Security A Qiang(保安阿强)
+title: Security A Qiang-保安阿强
 description: Security A Qiang的的保安日记,记录阿强的保安生活
 keywords: 保安日记,保安阿强,Security,废物,辣鸡,废青,无前途
 author: Security A Qiang
