--- a/_config.yml
+++ b/_config.yml
@@ -54,5 +54,11 @@ extMath: false
 links:
   - title: 保安阿强
     url: https://veneno.eu.org
+  - title: 保安阿强
+    url: https://i-lov.eu.org
+  - title: venenl
+    url: https://venenl.vercel.app
+
+
 
 
