--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ domainUrl: 'https://venenl.github.io'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
-tucaoUrl: https://pl11.vercel.app
+tucaoUrl: https://waline.llov.eu.org
 
 # 菜单
 # 必填字段 title: '文本' url: '链接'
@@ -41,7 +41,7 @@ menu:
     url: /pages/about.html
 
 # 点击页面文字冒出特效,不需要请设置为false
-extClickEffect: true
+extClickEffect: false
 
 # Google Adsense,不需要请设置为false
 # _includes/ext-adsense.html 里面修改为自己的配置
