--- a/_config.yml
+++ b/_config.yml
@@ -54,12 +54,12 @@ extMath: false
 
 # 友情链接
 links:
+  - title: 阿强的云
+    url: https://cloud.llov.eu.org
   - title: 保安阿强
-    url: https://veneno.eu.org
-  - title: 保安阿强
-    url: https://i-lov.eu.org
-  - title: venenl
-    url: https://venenl.vercel.app
+    url: https://llov.eu.org
+  - title: 阿强家里路由器
+    url: https://l.iiiii.eu.org
 
 
 
